# project1_Samoylov_Ilya_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
