[tool.poetry]
name = "project1-samoylov-ilya-m25-555"
version = "0.1.0"
description = ""
authors = ["IlyaSamoylov <ilya.samoylov2004@mail.ru>"]
readme = "README.md"
 packages = [
     { include = "labyrinth_game" },
 ]
 
[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
